--- a/_config.yml
+++ b/_config.yml
@@ -8,4 +8,10 @@ aux_links:
   Template Repository: https://github.com/Jules-Bens-Aa/jb2a.github.io
 
 # Color scheme supports "light" (default) and "dark"
-color_scheme: dark
+color_scheme: jb2a-theme
+
+# Set a path/url to a logo that will be displayed instead of the title
+logo: "/assets/images/logo-square.png"
+
+# Set a path/url to a favicon that will be displayed by the browser
+favicon_ico: "/assets/images/favicon.ico"
