--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,10 @@ title: JB2A - Wiki
 description: A starter template for a Jeykll site using the Just the Docs theme!
 theme: just-the-docs
 
-url: https://Jules-Bens-Aa.github.io/jb2a.github.io
+url: https://Jules-Bens-Aa.github.io/jb2a-wiki
 
 aux_links:
-  Wiki Repository: https://github.com/Jules-Bens-Aa/jb2a.github.io
+  Wiki Repository: https://github.com/Jules-Bens-Aa/jb2a-wiki
 
 # Color scheme supports "light" (default) and "dark"
 color_scheme: jb2a-theme
